# rpm-study

./: .gitignore  README.md  run_hello.sh
SPECS/: httpd.spec  mysql.spec  nagios-plugins.spec  nagios.spec  pptpd.spec  ruby.spec  telnet.spec  vtun.spec
cookbooks/rpmbuild/: CHANGELOG.md  README.md  metadata.rb
cookbooks/rpmbuild/recipes/: default.rb
rpmbuild/SPECS/: hello.spec
source/: hello.patch0
source/hello/: Makefile  Makefile.in  config.h.in  configure  configure.ac  configure.in  hello.c
source/hello/autom4te.cache/: output.1  requests  traces.0  traces.1
